--- a/app/assets/stylesheets/time_sheets.scss
+++ b/app/assets/stylesheets/time_sheets.scss
@@ -4,52 +4,62 @@
 body {
 }
 .simple-calendar {
+   .calendar-heading {
+     background-color: aquamarine;
+     padding: 5px;
+   }
+
+  .calendar-title{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+
+  }
+
   table {
     -webkit-border-horizontal-spacing: 0px;
     -webkit-border-vertical-spacing: 0px;
     background-color: rgba(0, 0, 0, 0);
-    border: 1px solid rgb(221, 221, 221);
-    border-collapse: collapse;
-    box-sizing: border-box;
+    //border: 1px solid rgb(221, 221, 221);
+    border-collapse: separate;
+    border-spacing: 5px;
+
+    //box-sizing: border-box;
     max-width: 100%;
     width: 100%;
   }
 
   tr {
-    border-collapse: collapse;
   }
 
   th {
-    padding: 6px;
-    border-bottom: 2px solid rgb(221, 221, 221);
     border-collapse: collapse;
-    border-left: 1px solid rgb(221, 221, 221);
-    border-right: 1px solid rgb(221, 221, 221);
-    border-top: 0px none rgb(51, 51, 51);
-    box-sizing: border-box;
+    border-spacing: 0px!important;
+    text-align: center;
+    padding: 6px;
+    border: 0px solid rgb(221, 221, 221) !important;
     text-align: left;
+    //border-radius: 10px;
   }
 
   td {
-    color: black;
 
-    padding: 6px;
+    color: black;
     vertical-align: top;
     width: 14%;
 
-    border: 1px solid #ddd;
-    border-top-color: rgb(221, 221, 221);
-    border-top-style: solid;
-    border-top-width: 1px;
-    border-right-color: rgb(221, 221, 221);
-    border-right-style: solid;
-    border-right-width: 1px;
-    border-bottom-color: rgb(221, 221, 221);
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    border-left-color: rgb(221, 221, 221);
-    border-left-style: solid;
-    border-left-width: 1px;
+    border: 1px solid rgb(221, 221, 221);
+    border-radius: 10px;
+
+    //border-right-color: rgb(221, 221, 221);
+    //border-right-style: solid;
+    //border-right-width: 1px;
+    //border-bottom-color: rgb(221, 221, 221);
+    //border-bottom-style: solid;
+    //border-bottom-width: 1px;
+    //border-left-color: rgb(221, 221, 221);
+    //border-left-style: solid;
+    //border-left-width: 1px;
     a {
       color: black;
     }
