update calender style

--- a/app/views/time_sheets/index.html.erb
+++ b/app/views/time_sheets/index.html.erb
@@ -8,7 +8,7 @@
   <%# end %>
 <%# end %>
   <%= my_calendar do |date| %>
-    <%= date.strftime("%d %a %b ") %>
+    <%= date.strftime("%d  %b ") %>
   <%end %>
 
 
