update calender style

--- a/app/assets/stylesheets/time_sheets.scss
+++ b/app/assets/stylesheets/time_sheets.scss
@@ -16,6 +16,12 @@ body {
 
   }
 
+  .no-decoration{
+    text-decoration: none;
+    pointer-events:none;
+
+  }
+
   table {
     -webkit-border-horizontal-spacing: 0px;
     -webkit-border-vertical-spacing: 0px;
