--- a/app/views/time_sheets/_my_calendar.html.erb
+++ b/app/views/time_sheets/_my_calendar.html.erb
@@ -42,14 +42,14 @@
 
               <% if Work.find_by(time_sheet: timesheet).invoice.present? %>
                   <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-invoice shadow'] do %>
-                    <%= link_to current_day_path(day) do %>
+                    <%= link_to current_day_path(day), class: 'no-decoration' do %>
                       <% block.call day, sorted_events.fetch(day, []) %>
                     <% end %>
                   <% end %>
               <% else %>
 
                   <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet shadow'] do %>
-                    <%= link_to current_day_path(day) do %>
+                    <%= link_to current_day_path(day), class: 'no-decoration' do %>
                       <% block.call day, sorted_events.fetch(day, []) %>
                     <% end %>
                   <% end %>
@@ -58,7 +58,7 @@
 
             <% else %>
               <%= content_tag :td, class: [calendar.td_classes_for(day),'shadow'] do %>
-                <%= link_to current_day_path(day) do %>
+                <%= link_to current_day_path(day), class: 'no-decoration' do %>
                   <% block.call day, sorted_events.fetch(day, []) %>
 
                  <% end %>
