--- a/app/views/social_info/index.pdf.erb
+++ b/app/views/social_info/index.pdf.erb
@@ -30,7 +30,7 @@
       <th>Date</th>
       <th>Link</th>
     </tr>
-    <% @github.commits.each do |v, i| %>
+    <% @commits.each do |v, i| %>
       <tr>
 
         <td>    <%= v['commit']['message'] %></td>
