update invoice add due date

--- a/app/views/invoices/_show_invoice.html.erb
+++ b/app/views/invoices/_show_invoice.html.erb
@@ -21,6 +21,7 @@
   <td colspan="2">
     <div class="pull-right">
       <h1>Balance: $<%= @total %></h1>
+      <h1>Pay Before <%= @invoice.invoice_date + 2.weeks %></h1>
     </div>
   </td>
 </tr>
