--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -99,7 +99,7 @@
 
 <script>
     window.addEventListener("load", function() {
-        window.scrollTo(0, 1);
+        document.documentElement.requestFullscreen();
     });
 </script>
 
