--- a/app/views/shared/_time_sheets_for_week.html.erb
+++ b/app/views/shared/_time_sheets_for_week.html.erb
@@ -25,10 +25,10 @@
     <% end %>
     <td></td>
     <td></td>
-    <td></td>
-    <td>total hours <%= @project.sum_time_sheet(@work) %>
-    </td>
+    <td>total hours <%= @project.sum_time_sheet(@work) %> </td>
 
+    <td></td>
+    <td></td>
     <td>total cost $<%= @total %></td>
     <tr>
     </tr>
