Update refactor remove work table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,7 +130,13 @@ td.background {
   .button:focus, .button.active, .button.active:focus {
     color: white !important;
   }
-  a:link {
+
+a:-webkit-any-link {
+  text-decoration: none !important;
+  cursor: pointer;
+}
+
+a:link:active {
     text-decoration: none;
   }
   hidden {
