--- a/app/views/days/_buttons.html.erb
+++ b/app/views/days/_buttons.html.erb
@@ -1,8 +1,16 @@
 <div class="box">
   <div class="btn-group"></div>
-  <%= link_to 'Calender', root_path, class: 'btn btn-default' %>
-  <%= link_to 'Hours', time_sheet_path(@day), class: 'btn btn-default' %>
-  <%= link_to 'Travel', time_sheet_travels_path(@day), class: 'btn btn-default' %>
-  <%= link_to 'Previous Day ', current_day_path(@day.time_period - 1.day,@day.project_id), class: 'btn btn-default' %>
-  <%= link_to 'Next Day ', current_day_path(@day.time_period + 1.day,@day.project_id), class: 'btn btn-default' %>
+  <%= link_to current_day_path(@time_sheet.time_period - 1.day, @time_sheet.project_id), class: 'btn btn-default' do %>
+    <i class="fa fa-arrow-left"></i>
+    Previous Day
+  <% end %>
+  <%= link_to root_path, class: 'btn btn-default' do %>
+    <i class="fa fa-calendar"></i>
+    Calender
+  <% end %>
+
+  <%= link_to current_day_path(@time_sheet.time_period + 1.day, @time_sheet.project_id), class: 'btn btn-default' do %>
+    Next Day
+    <i class="fa fa-arrow-right"></i>
+  <% end %>
 </div>
