--- a/app/views/travels/_form.html.erb
+++ b/app/views/travels/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="box">
-  <%= form_for(@travel,url: time_sheet_travels_url(@time_sheet,@travel), method: :create) do |f| %>
+  <%= form_for(@travel, remote: true) do |f| %>
     <% if @travel.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@travel.errors.count, "error") %> prohibited this time_sheet from being saved:</h2>
@@ -26,13 +26,15 @@
             <%= f.select(:vehicle_id, options_for_select(Vehicle.select_attributes, f.object.vehicle_id), {}, class: ' btn btn-default form-control') %>
           </div>
           <div class="col-xs-6 col-sm-3" style="padding: 0%">
-            <%= f.number_field :od_start, min: Vehicle.previous_od_finish, class: 'form-control ', placeholder: 'Odometer Start' , :autofocus => true%>
+            <%= f.number_field :od_start, value: Vehicle.previous_od_finish, class: 'form-control ', placeholder: 'Odometer Start', :autofocus => true %>
           </div>
           <div class="col-xs-6 col-sm-3" style="padding: 0%">
-            <%= f.number_field :od_finish, min: Vehicle.previous_od_finish, class: 'form-control ', placeholder: 'Odometer Finish' %>
+            <%= f.number_field :od_finish, value: Vehicle.previous_od_finish, class: 'form-control ', placeholder: 'Odometer Finish' %>
           </div>
           <div class="hidden-xs col-sm-2">
-            <%= f.hidden_field :time_sheet_id, value: @time_sheet.id %>
+            <%= f.hidden_field :user_id, value: current_user.id %>
+            <%= f.hidden_field :project_id, value: params[:project_id] %>
+            <%= f.hidden_field :travel_date, value: params[:time_period] %>
             <%= link_to "remove", '#', class: "remove_fields", style: 'text-overflow:hidden' %>
           </div>
           <div class="col-xs-12 col-sm-12" style="padding: 0%">
