--- a/app/views/travels/_travel_fields.html.erb
+++ b/app/views/travels/_travel_fields.html.erb
@@ -1,4 +1,4 @@
-<tr>
+
   <td colspan="4" style="margin: 0%; padding: 0%">
     <div class="col-xs-12 col-sm-3 " style="padding: 0%">
       <%=  f.vehicle.rego_no %>
@@ -12,5 +12,8 @@
     <div class="col-xs-12 col-sm-12" style="padding: 0%">
       <%=  f.purpose %>
     </div>
+
+    <div class="col-xs-12 col-sm-12" style="padding: 0%">
+      <%= link_to 'Edit', edit_travel_path(f.id), remote: true %> |
+      <%= link_to 'Back', travels_path %></div>
   </td>
-</tr>
