--- a/app/views/time_sheets/_my_calendar.html.erb
+++ b/app/views/time_sheets/_my_calendar.html.erb
@@ -42,14 +42,14 @@
 
               <% if timesheet.invoice_id? %>
                   <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-invoice shadow'] do %>
-                    <%= link_to current_day_path(day,@project), class: 'no-decoration' do %>
+                <%= link_to current_day_path(day, project_id: @project.id), class: 'no-decoration' do %>
                       <% block.call day, sorted_events.fetch(day, []) %>
                     <% end %>
                   <% end %>
               <% else %>
 
                   <%= content_tag :td, class: [calendar.td_classes_for(day), 'has-time-sheet shadow'] do %>
-                    <%= link_to current_day_path(day,@project), class: 'no-decoration' do %>
+                <%= link_to current_day_path(day, project_id: @project.id), class: 'no-decoration' do %>
                       <% block.call day, sorted_events.fetch(day, []) %>
                     <% end %>
                   <% end %>
@@ -57,7 +57,7 @@
 
             <% else %>
               <%= content_tag :td, class: [calendar.td_classes_for(day),'shadow'] do %>
-                <%= link_to current_day_path(day,@project), class: 'no-decoration' do %>
+              <%= link_to current_day_path(day, project_id: @project.id), class: 'no-decoration' do %>
                   <% block.call day, sorted_events.fetch(day, []) %>
                  <% end %>
                <% end %>
