--- a/app/views/time_sheets/_my_calendar.html.erb
+++ b/app/views/time_sheets/_my_calendar.html.erb
@@ -36,7 +36,7 @@
       <tr>
 
         <% week.each do |day| %>
-          <% timesheet = @time_sheets.find_or_initialize_by(time_period: day) %>
+          <% timesheet = @time_sheets.find_or_initialize_by(time_period: day, project_id: @project.id) %>
 
             <% if timesheet.id? %>
 
