--- a/app/views/days/_buttons.html.erb
+++ b/app/views/days/_buttons.html.erb
@@ -1,15 +1,15 @@
 <div class="box">
   <div class="btn-group"></div>
-  <%= link_to current_day_path(@time_sheet.time_period - 1.day, @time_sheet.project_id), class: 'btn btn-default' do %>
+  <%= link_to current_day_path(@time_sheet.time_period - 1.day, project_id: @time_sheet.project_id), class: 'btn btn-default' do %>
     <i class="fa fa-arrow-left"></i>
     Previous Day
   <% end %>
-  <%= link_to root_path, class: 'btn btn-default' do %>
+  <%= link_to root_path(project_id: @time_sheet.project_id), class: 'btn btn-default' do %>
     <i class="fa fa-calendar"></i>
     Calender
   <% end %>
 
-  <%= link_to current_day_path(@time_sheet.time_period + 1.day, @time_sheet.project_id), class: 'btn btn-default' do %>
+  <%= link_to current_day_path(@time_sheet.time_period + 1.day, project_id: @time_sheet.project_id), class: 'btn btn-default' do %>
     Next Day
     <i class="fa fa-arrow-right"></i>
   <% end %>
