--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -2,7 +2,7 @@
 <div class="box">
 
 <div class='pull-right '>
-  <%= link_to 'New Invoice', new_invoice_path, class: 'btn btn-primary' %>
+  <%= link_to 'New Invoice', new_invoice_path(current_user), class: 'btn btn-primary' %>
 </div>
 <h1>Invoices</h1>
 </div>
