--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -15,9 +15,9 @@
               $('#vehicle_index').html(html);
           });
 
-          $.ajax({url: "<%=  travels_path(time_period: params[:time_period],) %>"}).done(function (html) {
-              $('#travel_index').html(html);
-          });
+          <!--          $.ajax({url: "<%#=  travels_path(time_period: params[:time_period],) %>"}).done(function (html) {-->
+          <!--              $('#travel_index').html(html);-->
+          <!--          });-->
       </script>
     <% end %>
 
