--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,6 +9,7 @@
     <%= link_to 'Edit', edit_project_path(@project), class: 'btn btn-default' %>
     <%= link_to 'Back', projects_path, class: 'btn btn-default' %>
     <%= link_to 'GitHub', social_info_index_path(project: @project), class: 'btn btn-default' %>
+    <%= link_to 'Invoices', project_invoices_path(project_id: @project.id), class: 'btn btn-default' %>
   </div>
 </div>
 
