--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -69,7 +69,7 @@ td.has-time-sheet:active {
 }
 
 .has-invoice {
-  background: url('tick.png');
+  background: image-url('tick.png');
   background-position: 50% 80%;
   background-size: 60% 60%;
   background-repeat: no-repeat;
