--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,22 +1,11 @@
-<div class="box">
-<h2>Edit <%= @user.full_name%></h2>
-<%= link_to "Back", :back, class: 'btn btn-default '%>
-</div>
-
-
-<div class="box">
-
-  <%= render 'users/form', user: @user %>
+<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= render "devise/shared/error_messages", resource: resource %>
 
-
-
-      </div><div class="box">
-  <%= devise_error_messages! %>
-<div class="field">
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -25,7 +14,7 @@
 
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
@@ -34,28 +23,21 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
+    <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-  <div class="row">
-    <%= f.submit "Update",class:'btn btn-default pull-right action' %>
+  <div class="actions">
+    <%= f.submit "Update" %>
   </div>
 <% end %>
-  </div>
 
-
-<div class="box ">
-  <div class="row" >
 <h3>Cancel my account</h3>
 
-  Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" },
-                          class:'btn btn-default pull-right ' , method: :delete %>
-</div>
-</div>
-  <br><br>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete %></p>
 
+<%= link_to "Back", :back %>
