--- a/app/views/travels/edit.js.erb
+++ b/app/views/travels/edit.js.erb
@@ -1,1 +1,1 @@
-$('#travel_form').html("<%= j render 'vehicle_travel_form' %>")
+$('#travel_form').html("<%= j render 'vehicle_travel_form',travel: @travel %>")
